--- a/src/assets/sass/main/main.scss
+++ b/src/assets/sass/main/main.scss
@@ -6,6 +6,7 @@
 
 // Pages, Layouts, and Components
 @import '../layouts/navbar';
+@import '../components/button';
 
 body {
     margin: 0;
@@ -15,6 +16,8 @@ body {
 
 html {
     background-color: $cream;
+    max-width: 1440px;
+    margin: auto;
 }
 
 li {
@@ -26,6 +29,7 @@ a {
 }
 
 p, a {
-    font-size: 16px !important;
+    font-size: 1.125rem !important;
     font-weight: 500 !important;
 }
+
