--- a/src/assets/sass/layouts/_navbar.scss
+++ b/src/assets/sass/layouts/_navbar.scss
@@ -5,6 +5,8 @@
     justify-content: space-between;
     align-items: center;
     margin: 1rem 1.5rem;
+    max-width: 1440px;
+    margin: auto;
 
     ul {
         display: flex;
@@ -13,7 +15,7 @@
     }
 
     li > a {
-        margin-right: 2rem;
+        margin-right: 2rem !important;
     }
 
     a{
