--- a/src/assets/sass/main/main.scss
+++ b/src/assets/sass/main/main.scss
@@ -6,6 +6,7 @@
 
 // Pages, Layouts, and Components
 @import '../layouts/navbar';
+@import '../home/home';
 @import '../components/button';
 
 body {
@@ -16,8 +17,6 @@ body {
 
 html {
     background-color: $cream;
-    max-width: 1440px;
-    margin: auto;
 }
 
 li {
@@ -31,5 +30,25 @@ a {
 p, a {
     font-size: 1.125rem !important;
     font-weight: 500 !important;
+    line-height: 1.3;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+h1 {
+    font-size: 3rem !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+img {
+    width: 100%;
+    object-fit: cover;
+}
+
+@media (max-width : 992px) {
+    h1 {
+        font-size: 2rem !important;
+    }
 }
 
