--- a/src/assets/sass/home/_newsletter.scss
+++ b/src/assets/sass/home/_newsletter.scss
@@ -6,18 +6,45 @@
     h1 {
         margin-top: 3rem !important;
         text-align: center;
+        z-index: 0 !important;
     }
 
     .newsletter_form {
         margin: 3rem 0rem;
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
+        flex-direction: column;
+        background-color: $white !important;
+        padding: 1rem;
+        border-radius: 7.5rem;
+
+        input {
+                border: none;
+                font-size: 1.25rem;
+
+            }
+
+        input::placeholder {
+            color: $green;
+            font-weight: 600;
+            text-align: center;
+        }
+
+        button {
+            border: none;
+            color: $cream;
+            background-color: $green;
+        }
     }
 }
 
 .home_newsletter > div {
     background-color: $green;
     color: $cream;
+    padding: 1.25rem;
+
 }
 
 
@@ -40,7 +67,18 @@
         }
 
         .newsletter_form {
+            width: 70%;
+            max-width: 70%;
             margin-bottom: 3rem;
+            justify-content: space-between;
+            flex-direction: row;
+            padding: 1.5rem 2.5rem;
         }
+    }
+}
+
+@media (max-width: 1375px) {
+    .vector--microphone {
+
     }
 }
