--- a/src/assets/sass/main/main.scss
+++ b/src/assets/sass/main/main.scss
@@ -6,10 +6,12 @@
 
 // Pages, Layouts, and Components
 @import '../layouts/navbar';
+@import '../layouts/footer';
 @import '../home/home';
 @import '../components/button';
 
 body {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;;
@@ -64,6 +66,23 @@ img.vector--arrow {
     object-fit: none;
 }
 
+img.vector--microphone {
+    position: absolute;
+    transform: translateX(-70%) translateY(-12.5%) !important;
+}
+
+@media (max-width: 1380px) {
+    img.vector--microphone {
+        transform: translateX(-75%) translateY(-20%) !important;
+    }
+}
+
+@media (max-width: 1240px) {
+    img.vector--microphone {
+        transform: translateX(-75%) translateY(2.5%) !important;
+    }
+}
+
 @media (max-width : 992px) {
     h1 {
         font-size: 2rem !important;
@@ -73,4 +92,6 @@ img.vector--arrow {
         display: none !important;
     }
 }
+
+
 
