--- a/src/assets/sass/home/_newsletter.scss
+++ b/src/assets/sass/home/_newsletter.scss
@@ -50,6 +50,10 @@
 
 
 @media (min-width: 768px) {
+    .home_newsletter {
+        margin-bottom: 7.5rem;
+    }
+
     .home_newsletter > div {
         width: 80%;
         max-width: 80%;
@@ -74,11 +78,5 @@
             flex-direction: row;
             padding: 1.5rem 2.5rem;
         }
-    }
-}
-
-@media (max-width: 1375px) {
-    .vector--microphone {
-
     }
 }
