--- a/src/assets/sass/main/main.scss
+++ b/src/assets/sass/main/main.scss
@@ -9,12 +9,13 @@
 @import '../layouts/footer';
 @import '../home/home';
 @import '../components/button';
+@import '../components/vectors';
 
 body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
 }
 
 html {
@@ -54,33 +55,6 @@ img {
     object-fit: cover;
     padding: 0 !important;
     margin: 0 !important;
-}
-
-img.vector {
-    max-width: 50%;
-    object-fit: none;
-}
-
-img.vector--arrow {
-    max-height: 150%;
-    object-fit: none;
-}
-
-img.vector--microphone {
-    position: absolute;
-    transform: translateX(-70%) translateY(-12.5%) !important;
-}
-
-@media (max-width: 1380px) {
-    img.vector--microphone {
-        transform: translateX(-75%) translateY(-20%) !important;
-    }
-}
-
-@media (max-width: 1240px) {
-    img.vector--microphone {
-        transform: translateX(-75%) translateY(2.5%) !important;
-    }
 }
 
 @media (max-width : 992px) {
