--- a/src/assets/sass/main/main.scss
+++ b/src/assets/sass/main/main.scss
@@ -12,6 +12,12 @@
 @import '../components/button';
 @import '../components/vectors';
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     box-sizing: border-box;
     margin: 0;
@@ -66,10 +72,6 @@ img {
     img.vector, img.vector--arrow {
         display: none !important;
     }
-}
-
-.about {
-    outline: solid red !important;
 }
 
 
