--- a/src/assets/sass/about/_header.scss
+++ b/src/assets/sass/about/_header.scss
@@ -1,6 +1,7 @@
 @import '../main/variables';
 
 .about_header {
+    padding: 1.5rem 2.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,8 +35,6 @@
 
 }
 
-// @media (max-width: )
-
 .about_header > div{
     max-width: 1400px;
     display: grid; 
@@ -51,6 +50,7 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: start;
+        gap: 1rem;
     }
 
     p {
@@ -60,5 +60,31 @@
     button {
         color: $white;
         background-color: $orange;
+    }
+}
+
+@media (max-width: 1100px) {
+    .about_header > div {
+        grid-template-columns: repeat(2, 1fr);
+
+        > div {
+            grid-column-start: 1 ;
+            grid-column-end: 3 ;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .about_header {
+        padding: 0rem;
+    }
+
+    .about_header > div {
+        padding: 0rem 2rem;
+        gap: 2rem;
+
+        button {
+            align-self: center;
+        }
     }
 }
