create and start products page

--- a/src/assets/sass/main/main.scss
+++ b/src/assets/sass/main/main.scss
@@ -9,6 +9,7 @@
 @import '../layouts/footer';
 @import '../home/home';
 @import '../about/about';
+@import '../products/products';
 @import '../components/button';
 @import '../components/vectors';
 
