--- a/src/assets/sass/about/_header.scss
+++ b/src/assets/sass/about/_header.scss
@@ -20,7 +20,8 @@
 
     .vector--star {
         position: absolute;
-        transform: translateX(-65%) translateY(-57%);
+        transform: translateX(-190%) translateY(-140%);
+        max-width: 5% !important;
     }
 
     .vector--line {
