--- a/src/assets/sass/home/_newsletter.scss
+++ b/src/assets/sass/home/_newsletter.scss
@@ -9,6 +9,10 @@
         z-index: 0 !important;
     }
 
+    img.vector--linescratch {
+        max-width: 25% !important;
+    }
+
     .newsletter_form {
         margin: 3rem 0rem;
         display: flex;
