--- a/src/assets/sass/main/main.scss
+++ b/src/assets/sass/main/main.scss
@@ -20,10 +20,14 @@
 }
 
 body {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
+}
+
+body.active {
+    overflow-y: hidden;
+    background-color: $cream !important;
 }
 
 html {
@@ -60,7 +64,7 @@ h1 {
 
 img {
     width: 100%;
-    object-fit: cover;
+    object-fit: cover !important;
     padding: 0 !important;
     margin: 0 !important;
 }
