--- a/src/assets/sass/home/_products.scss
+++ b/src/assets/sass/home/_products.scss
@@ -27,10 +27,10 @@
 
 .lineup_products {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
 
     img {
-        max-width: 70%;
+        max-width: 70% !important;
     }
 }
 
@@ -92,11 +92,8 @@
     }
 
     .product_carousel {
-        outline: solid red;
         display: none;
     }
 
-    .lineup_products {
-        display: flex;
-    }
+
 }
