--- a/src/assets/sass/main/main.scss
+++ b/src/assets/sass/main/main.scss
@@ -10,6 +10,7 @@
 @import '../home/home';
 @import '../about/about';
 @import '../products/products';
+@import '../contact/contact';
 @import '../components/button';
 @import '../components/vectors';
 
