--- a/src/assets/sass/home/_newsletter.scss
+++ b/src/assets/sass/home/_newsletter.scss
@@ -25,8 +25,8 @@
         border-radius: 7.5rem;
 
         input {
-                border: none;
-                font-size: 1.25rem;
+            border: none;
+            font-size: 1.25rem;
 
             }
 
@@ -40,6 +40,19 @@
             border: none;
             color: $cream;
             background-color: $green;
+        }
+
+        p {
+            color: $green;
+            font-weight: 600;
+            text-align: center;
+        }
+
+        i {
+            color: $orange;
+            font-size: 40px;
+            padding: 0 !important;
+            margin: 0 !important;
         }
     }
 }
@@ -81,6 +94,7 @@
             justify-content: space-between;
             flex-direction: row;
             padding: 1.5rem 2.5rem;
+
         }
     }
 }
