--- a/src/assets/sass/layouts/_footer.scss
+++ b/src/assets/sass/layouts/_footer.scss
@@ -9,6 +9,7 @@
     justify-content: space-between;
     padding: 2rem 1.5rem;
     max-width: 1440px;
+    margin: auto;
     
     a {
             color: $white;
