--- a/src/assets/sass/layouts/_navbar.scss
+++ b/src/assets/sass/layouts/_navbar.scss
@@ -6,7 +6,7 @@
     align-items: center;
     padding: 1rem 1.5rem;
     max-width: 1440px;
-    margin: auto;
+    margin: auto; 
 
     ul {
         display: flex;
@@ -23,6 +23,10 @@
     }
 
     li > a:hover {
+        border-bottom: solid 2px $orange;
+    }
+
+    li > a.active {
         border-bottom: solid 2px $orange;
     }
 
